# deskewk

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  deskewk
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  deskewk_tests  deskewk_tests[1]_include.cmake  deskewk_tests[1]_tests.cmake
include/: deskew.h
src/: cc.cpp  cc.hpp  deskew.cpp  deskew.hpp  deskew_v1.cpp  geotransform.cpp  geotransform.hpp  grayscale.cpp  grayscale.hpp  io.cpp  io.hpp  main.cpp  projection.cpp  projection.hpp  threshold.cpp  threshold.hpp  v1proc.hpp
tests/: CMakeLists.txt  test_deskew.cpp
